Fixes arrow alignment with menu icon

--- a/css/menu.css
+++ b/css/menu.css
@@ -183,13 +183,13 @@
 
 .fl-menu-panel {
   position: absolute;
-  left: 16px;
-  right: 16px;
-  bottom: 16px;
-  top: 60px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  top: 54px;
   background: #fff;
   -webkit-transition: -webkit-transform 0.2s ease-out, opacity 0.2s linear;
-  -webkit-transform: translate3d(0, -16px, 0);
+  -webkit-transform: translate3d(0, -10px, 0);
   opacity: 0;
   pointer-events: none;
   border-radius: 0;
@@ -214,12 +214,12 @@
   display: block;
   position: absolute;
   top: -22px;
-  right: 5px;
+  right: 1px;
 }
 
 .fl-menu-default-left .fl-menu-panel:before {
   right: auto;
-  left: 5px;
+  left: 1px;
 }
 
 .fl-app-menu.hasGoBack .fl-menu-panel:before {
